# bithealth-chatbot

./: .env.example  .gitignore  README.md  README_KUBERNETES.md  build-and-test.sh  code_prompt  docker-compose.yml  test_session_id_flow.py  test_websocket_client.py  test_websocket_integration.py
agents/appointment_management_agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
agents/appointment_management_agent/app/: main.py
agents/appointment_management_agent/app/api/v1/: endpoints.py
agents/appointment_management_agent/app/core/: appointment_service.py  config.py  database.py  dependencies.py  llm.py  logging_config.py
agents/appointment_management_agent/app/handlers/: kafka_handler.py
agents/appointment_management_agent/app/messaging/: kafka_client.py
agents/appointment_management_agent/app/models/: __init__.py  appointment.py  database.py  kafka_messages.py
agents/appointment_management_agent/app/prompts/: agent_prompts.py  booking_confirmation.txt  cancellation_policy_explain.txt  reminder_template.txt
agents/appointment_management_agent/tests/: conftest.py
agents/appointment_management_agent/tests/core/: test_appointment_service.py
agents/appointment_management_agent/tests/handlers/: test_kafka_handler.py
agents/info_dissemination_agent/: Dockerfile  README.md  requirements.txt
agents/rag-service-2/: .dockerignore  Dockerfile  pyproject.toml  readme.md  run_tests.sh
agents/rag-service-2/app/: main.py
agents/rag-service-2/app/api/v1/: endpoints.py
agents/rag-service-2/app/core/: config.py  dependencies.py  embeddings.py  llm.py  rag_service.py  retriever.py
agents/rag-service-2/app/doc/: app.md
agents/rag-service-2/app/handlers/: kafka_handler.py
agents/rag-service-2/app/messaging/: kafka_client.py
agents/rag-service-2/app/models/: document_chunks.py  kafka_messages.py  rag.py
agents/rag-service-2/app/prompts/: faq_query.txt  human_handoff_reason.txt  medical_advice_disclaimer.txt
agents/rag-service-2/docs/: architecture.md  workflow.md
agents/rag-service-2/tests/: test.md
agents/rag-service-2/tests/api/: test_endpoints.py
agents/rag-service-2/tests/core/: test_rag_service.py  test_retriever.py
agents/rag-service-2/tests/handlers/: test_kafka_handler.py
auth_identity_service/: Dockerfile  README.md  requirements.txt
backend_orchestrator/: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml
backend_orchestrator/config/: llm_config.yaml  orchestration_rules.yaml
backend_orchestrator/docs/: API_REFERENCE.md  ARCHITECTURE.md
backend_orchestrator/src/: main.py
backend_orchestrator/src/config/: settings.py
backend_orchestrator/src/llm_abstraction/: __init__.py  anthropic_provider.py  gemini_provider.py  prompt_manager.py  provider_interface.py
backend_orchestrator/src/messaging/: kafka_client.py
backend_orchestrator/src/prompts/: conversation_summarization.txt  general_info_response.txt  intent_classification.txt  system_prompt.txt
backend_orchestrator/src/session/: session_manager.py
backend_orchestrator/src/websocket/: websocket_manager.py
backend_orchestrator/src/workflow/: conversation_engine.py
backend_orchestrator/tests/: conftest.py  test_api.py  test_conversation_engine.py  test_kafka_client.py  test_llm_providers.py  test_main.py  test_prompt_manager.py  test_session_manager.py
design/: Chatbot_HL.md  Chatbot_requirements.md
docs/: FRONTEND_DEPLOYMENT.md  INTENT_AGENT_INTEGRATION_GUIDE.md  KUBERNETES_DEPLOYMENT.md  REST_API_AGENT_EXAMPLE.md  SESSION_ID_FLOW.md
experiments/: gitorg.sh  phase1_rag_experimentation.ipynb  pydlgcp.py
frontend/: .dockerignore  .env  .env.example  Dockerfile  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
frontend/src/: App.tsx
iac/: deploy-all.sh  destroy-all.sh
iac/appointment-agent/: build-image.sh  configmap.yaml  deployment.yaml  hpa.yaml  secret.sh  secret.yaml  service.yaml
iac/auth-service/: auth-service-deployment.yaml  auth-service-service.yaml
iac/backend-orchestrator/: backend-orchestrator-configmap.yaml  backend-orchestrator-deployment.yaml  backend-orchestrator-hpa.yaml  backend-orchestrator-secret.yaml  backend-orchestrator-service.yaml  build-image.sh
iac/communication-gateway/: communication-gateway-deployment.yaml  communication-gateway-service.yaml
(+69 files in other folders)
