[project]
name = "rag-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Prawibowo",email = "tan.joenarto@bithealth.co.id"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.1,<0.31.0",
    "langchain>=0.2.1,<0.3.0",
    # "sentence-transformers>=3.0.1,<4.0.0",
    "sqlalchemy>=2.0.31,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "pgvector>=0.2.5,<0.3.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "langchain-google-genai>=1.0.6,<2.0.0",
    "confluent-kafka>=2.4.0,<3.0.0",
    "structlog>=24.1.0,<25.0.0",
    "langchain-community>=0.2.1,<0.3.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "langchain-huggingface>=0.0.3,<0.1.0" # Modern package for Hugging Face integrations
]

[tool.poetry]
# This section tells Poetry where to find the package source code.
# By default, it looks for a package named 'rag_service' based on the project name.
# We are explicitly telling it that our package is the 'app' directory.
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
